fixed images, added marketing jumpstart

--- a/src/pages/about/about.module.scss
+++ b/src/pages/about/about.module.scss
@@ -40,6 +40,7 @@
 	}
 
 	a {
+		display: block;
 		&:hover {
 			display: block;
 			filter: grayscale(100);
@@ -49,6 +50,8 @@
 	img {
 		display: block;
 		max-width: 300px;
+		height: auto;
+		width: 100%;
 	}
 }
 
